2005-06-07  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/fusion/lib: Deprecate the early fusion interface, which
	is now superseded by the POSIX support in user-space.

	* skins/uvm: Move the UVM portions of the deprecated fusion
	interface to a separate skin.
	
2005-06-06  Dmitry Adamushko  <dmitry.adamushko@datacon.at>

	* nucleus/pipe.c (xnpipe_read_wait): Wake up a single reader upon
	data availability.
	
2005-06-06  Philippe Gerum  <rpm@xenomai.org>

	* skins/posix/posix.h: Fix clockid_t enum so that its members
	conform to the kernel defines.

	* nucleus/shadow.c (substitute_linux_syscall): No more syscall
	substitution, since the POSIX skin now handles user-space
	requests.
	(lostage_handler): Discard now useless handling of LO_SIGNAL_REQ
	request.

	* testsuite/cruncher: Convert to the new user-space POSIX support.

	* include/nucleus/asm-*/atomic.h: Add cpu_relax() in user-space
	context.

005-06-05  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* testsuite/latency/latency.c (latency): Reduce warmup time again,
	to 1 second. Make overrun accounting in latency thread, to avoid
	losing overruns.

2005-06-04  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/lib: Use constructor section to connect to the
	in-kernel skin.

2005-06-04  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* testsuite/latency/latency.c (latency): Reduce warmup time to 2
	seconds.

	* testsuite/latency/latency.c: Warm-up times, for better accuracy,
	especially on low-end machines. Compute extrema latencies in
	latency thread, to avoid losing some of them.

	* skins/posix/thread.c (pthread_detach, pthread_join): Use
	xnthread_t flags spare bit to signal a detached joinee instead of
	XNBREAK, XNBREAK is reserved for signals.
	(thread_delete_hook): Avoid useless call to xnpod_schedule.

2005-06-04  Philippe Gerum  <rpm@xenomai.org>

	* scripts/rtai-config.in: Provide for --posix-* flags.

	* include/nucleus/fusion.h: Refactor the fusion API namespace, so